update README & overflow fixes

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -68,11 +68,6 @@ table
   border-radius: 2px
   box-shadow: 0 0 0 1px reduce(12) inset
 
-@media (min-width: 50em)
-  table
-    display: table
-    width: 100%
-
 th, td
   padding: .5em 1em
   box-shadow: 0 0 0 1px reduce(12)
